# django_rest

./: README.md  pyproject.toml
project/api/: urls.py
project/base/migrations/: 0001_initial.py  0002_alter_item_created.py  0003_alter_item_created.py
project/project/: settings.py
