[tool.poetry]
name = "django-rest"
version = "0.1.0"
description = ""
authors = ["Owais <oowais@gmail.com>"]
readme = "README.md"
packages = [{include = "django_rest"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
djangorestframework = "^3.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
